--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,24 @@
         <li><%= link_to t("static_pages.home.title"), root_path %></li>
         <li><%= link_to t("static_pages.help.title"), help_path %></li>
         <li><%= link_to t("users.signup.header_title"), signup_path %></li>
-        <li><%= link_to t("users.login.title"), "#" %></li>
+        <% if logged_in? %>
+          <li><%= link_to t("users.title"), users_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t("users.account") %><b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("users.profile.title"), current_user %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t("users.logout.title"), logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t("users.signup.header_title"), signup_path %></li>
+          <li><%= link_to t("users.signin.title"), signin_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
