--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("static_pages.home.title"), root_path %></li>
         <li><%= link_to t("static_pages.help.title"), help_path %></li>
-        <li><%= link_to t("login.title"), "#" %></li>
+        <li><%= link_to t("users.signup.header_title"), signup_path %></li>
+        <li><%= link_to t("users.login.title"), "#" %></li>
       </ul>
     </nav>
   </div>
