--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,6 +4,12 @@
 $gray-medium-light: #eaeaea;
 
 /* universal */
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 body {
   padding-top: 60px;
 }
@@ -66,5 +72,39 @@ footer {
       float: left;
       margin-left: 15px;
     }
+  }
+}
+
+/* forms */
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
+
+.gender {
+  label {
+    margin-right: 10px
+  }
+  margin-bottom : 10px
+}
+
+input {
+  height: auto !important;
+}
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+
+  .form-control {
+  color: $state-danger-text;
   }
 }
