--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,11 @@
   <body>
     <%= render "layouts/header" %>
     <div class="container">
-    <%= yield %>
-    <%= render "layouts/footer" %>
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
+      <%= yield %>
+      <%= render "layouts/footer" %>
     </div>
   </body>
 </html>
