--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,7 +1,7 @@
 <% provide :title, t("movies.details") %>
 
 <div class="movie_details">
-  <img src="<%= @movie.picture %>" width="200px" height="300px">
+  <img src="<%= @movie.picture.url %>" width="200px" height="300px">
   </img>
   <div>
     <h1><%= @movie.name %> </h1>
