--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to t("users.profile.title"), current_user %></li>
+              <li><%= link_to t("users.settings.title"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t("users.logout.title"), logout_path, method: :delete %>
