--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -147,3 +147,23 @@ input {
     margin-left: 20px
   }
 }
+
+/* schedules */
+.days {
+  display: flex;
+  margin-left: 100px;
+  h3 {
+    margin-left: 20px;
+  }
+}
+
+.schedules {
+  span {
+    font-size : 30px;
+  }
+}
+
+.schedules_time {
+  margin-left : 30px;
+  color: red
+}
