--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -167,3 +167,11 @@ input {
   margin-left : 30px;
   color: red
 }
+
+.seats_group {
+  span {
+    font-size: 32px;
+    background: #3e515d;
+    margin-left: 20px;
+  }
+}
