--- a/app/views/theaters/show.html.erb
+++ b/app/views/theaters/show.html.erb
@@ -23,7 +23,9 @@
       <span> <%= m[1] %> <span>
       <% @schedules.each do |s| %>
         <% if s.movie_id == m[0] && s.room.theater_id == @theater.id %>
-            <span class="schedules_time"><%= s.start_at.strftime("%H:%M") %><span>
+            <span class="schedules_time">
+              <%= link_to s.start_at.strftime("%H:%M"), new_booking_path(id: s.id) %>
+            <span>
         <% end %>
       <% end %>
     </div>
