--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -10,3 +10,22 @@
     <button type="button"><%= t("movies.booking") %></button>
   </div>
 </div>
+<h1><%= t "comments.title" %></h1>
+
+<%= render "form_comment" %>
+
+<% @comments.each do |c| %>
+  <ul class="comments">
+    <li class="col-sm-12">
+      <span class="user"><%= link_to c.user.name %></span>
+      <span class="content"><%= c.content %></span>
+      <span class="timestamp">
+        <%= t("comments.create.timestamp", time: time_ago_in_words(c.created_at)) %>
+        <% if current_user?(c.user) %>
+        <%= link_to t("comments.delete.title"), movie_comment_path(movie_id:@movie.id ,id: c.id), method: :delete,
+           data: {confirm: t("comments.delete.confirm")} %>
+        <% end %>
+      </span>
+    </li>
+  </ul>
+<% end %>
