show up comming film

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -112,7 +112,9 @@ input {
 /* movie */
 .movie {
   margin-top: 10px;
-  margin-right: 2em
+  margin-right: 2em;
+  width: 240px;
+  height: 339px
 }
 
 /* movie_details */
