--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,11 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("static_pages.home.title"), root_path %></li>
         <li><%= link_to t("static_pages.help.title"), help_path %></li>
+        <li><%= link_to t("schedules.title"), schedules_path %></li>
         <li><%= link_to t("users.signup.header_title"), signup_path %></li>
         <li><%= link_to t("theaters.title"), theaters_path %></li>
         <% if logged_in? %>
           <li><%= link_to t("booking_details.title"), booking_details_path %></li>
-          <li><%= link_to t("users.title"), users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t("users.account") %><b class="caret"></b>
