--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,7 @@
         <li><%= link_to t("theaters.title"), theaters_path %></li>
         <% if logged_in? %>
           <li><%= link_to t("booking_details.title"), booking_details_path %></li>
+          <li><%= link_to t("users.title"), admin_users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t("users.account") %><b class="caret"></b>
