--- a/app/views/admin/booking_details/index.html.erb
+++ b/app/views/admin/booking_details/index.html.erb
@@ -18,7 +18,7 @@
     <div class="ticket_items">
       <div class="row">
         <div class="col-sm-2"><%= n.schedule.movie.name %></div>
-        <div class="col-sm-2"><%= current_user.name %></div>
+        <div class="col-sm-2"><%= n.user.name %></div>
         <div class="col-sm-2"><%= DateTime.parse(n.schedule.start_at).strftime(Settings.datetime.format) %></div>
         <div class="col-sm-1"><%= b.seat_id %></div>
         <div class="col-sm-2"><%= n.payment.payment_type %></div>
