--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for @user do |f| %>
-  <%= render "shared/error_messages", object: f.object %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= render "devise/shared/error_messages", resource: resource %>
   <%= f.label :name %>
   <%= f.text_field :name, class: "form-control" %>
   <%= f.label :email %>
