--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,9 +6,9 @@
         <li><%= link_to t("static_pages.home.title"), root_path %></li>
         <li><%= link_to t("static_pages.help.title"), help_path %></li>
         <li><%= link_to t("schedules.title"), schedules_path %></li>
-        <li><%= link_to t("users.signup.header_title"), signup_path %></li>
+        <li><%= link_to t("users.signup.header_title"), new_user_registration_path %></li>
         <li><%= link_to t("theaters.title"), theaters_path %></li>
-        <% if logged_in? %>
+        <% if user_signed_in? %>
           <li><%= link_to t("booking_details.title"), booking_details_path %></li>
           <li><%= link_to t("users.title"), admin_users_path %></li>
           <li class="dropdown">
@@ -17,15 +17,15 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to t("users.profile.title"), current_user %></li>
-              <li><%= link_to t("users.settings.title"), edit_user_path(current_user) %></li>
+              <li><%= link_to t("users.settings.title"), edit_user_registration_path %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to t("users.logout.title"), logout_path, method: :delete %>
+                <%= link_to t("users.logout.title"), destroy_user_session_path, method: :delete %>
               </li>
             </ul>
           </li>
         <% else %>
-          <li><%= link_to t("users.signin.title"), signin_path %></li>
+          <li><%= link_to t("users.signin.title"), new_user_session_path %></li>
         <% end %>
       </ul>
     </nav>
