--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
-<% provide(:title, @user.name) %>
+<% provide(:title, current_user.name) %>
 
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
       <h1>
-        <%= @user.name %>
+        <%= current_user.name %>
       </h1>
     </section>
   </aside>
