--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -1,6 +1,6 @@
   <li>
     <%= link_to user.name, user %> |
-    <% if current_user.is_admin? && !current_user?(user) %>
+    <% if current_user.is_admin? %>
       <%= link_to t("users.delete"), admin_user_path(user), method: :delete,
                                             data: {confirm: t("movies.delete.confirm")} %>
     <% end %>
