--- a/app/views/admin/movies/_search_form.html.erb
+++ b/app/views/admin/movies/_search_form.html.erb
@@ -3,4 +3,6 @@
   <%= f.search_field :name_cont, class:  "form-control" %>
     </div>
   <%= f.submit t("movies.search"), class: "btn btn-primary" %>
+  <%= link_to "Thêm mới", new_admin_movie_path ,class: "btn btn-success" %>
+
 <% end %>
