--- a/app/views/admin/movies/index.html.erb
+++ b/app/views/admin/movies/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, t("movies.all")) %>
 
-<h1><%= t("movies.all") %></h1>
+<h1><%= "Danh sách phim" %></h1>
 
 <%= render "search_form" %>
 <ul class="col-sm-12" >
