--- a/app/views/admin/movies/new.html.erb
+++ b/app/views/admin/movies/new.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, t("movies.create.title") %>
-<% provide :button_text, t("movies.create.btn") %>
+<% provide :button_text, "Thêm" %>
 
 <h1><%= t "movies.create.title" %></h1>
 <div class="row">
