--- a/app/views/shared/_movie.html.erb
+++ b/app/views/shared/_movie.html.erb
@@ -1,7 +1,7 @@
-<h1><%= t "movies.showing" %></h1>
+<h1><%= "Phim đang chiếu" %></h1>
 
 <%= render "shared/movie_collection", object: @movies_is_showing %>
 
-<h1><%= t "movies.comming" %></h1>
+<h1><%= "Phim sắp chiếu" %></h1>
 
 <%= render "shared/movie_collection", object: @movies_is_comming %>
