--- a/app/views/admin/movies/_form.html.erb
+++ b/app/views/admin/movies/_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_for @movie do |f| %>
   <%= render "shared/error_messages", object: f.object %>
-  <%= f.label :name %>
+  <%= f.label "Tên" %>
   <%= f.text_field :name, class: "form-control" %>
-  <%= f.label :description %>
+  <%= f.label "Mô tả" %>
   <%= f.text_field :description, class: "form-control" %>
-  <%= f.label :time %>
+  <%= f.label "Thời lượng" %>
   <%= f.text_field :time, class: "form-control" %>
-  <%= f.label :picture %>
+  <%= f.label "Hình ảnh" %>
   <%= f.file_field :picture, class: "form-control" %>
   <div class="gender">
     <%= f.collection_radio_buttons(
