--- a/app/views/bookings/_seat.html.erb
+++ b/app/views/bookings/_seat.html.erb
@@ -1,6 +1,6 @@
 <div class="seats_group">
-  <% @seats_count.each do |s| %>
-    <span id="<%= s.id %>" class="<%= 'seated' if @seats_booked.include?(s.id) %>">XX</span>
+  <% @seats_count.each_with_index do |s,index| %>
+    <div id="<%= s.id %>" class="<%= 'seated' if @seats_booked.include?(s.id) %> ss"><%= s.id %></div>
   <% end %>
 </div>
 
