--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Chỉnh sửa thông tin</h2>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -18,19 +18,13 @@
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
-      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.label :password %><br />
       <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, class: "form-control" %>
-      <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
+      <%= f.label "Mật khẩu hiện tại" %>
       <%= f.password_field :current_password, class: "form-control" %>
-      <%= f.submit "Update" %>
+      <%= f.submit "Cập nhật" %>
     <% end %>
-
-    <h3>Cancel my account</h3>
-
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-    <%= link_to "Back", :back %>
   </div>
 </div>
