--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,20 +3,21 @@
     <%= link_to t("app_title"), root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
+        <% if current_user && current_user.is_admin  %>
+         <li><%= link_to "Trang quản lý", dashboard_path %></li>
+        <% end %>
         <li><%= link_to t("static_pages.home.title"), root_path %></li>
         <li><%= link_to t("static_pages.help.title"), help_path %></li>
         <li><%= link_to t("schedules.title"), schedules_path %></li>
         <li><%= link_to t("users.signup.header_title"), new_user_registration_path %></li>
         <li><%= link_to t("theaters.title"), theaters_path %></li>
         <% if user_signed_in? %>
-          <li><%= link_to t("booking_details.title"), booking_details_path %></li>
-          <li><%= link_to t("users.title"), admin_users_path %></li>
+          <li><%= link_to "Vé đã đặt", booking_details_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <%= t("users.account") %><b class="caret"></b>
+              <%= "Tài khoản" %><b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to t("users.profile.title"), current_user %></li>
               <li><%= link_to t("users.settings.title"), edit_user_registration_path %></li>
               <li class="divider"></li>
               <li>
